@@ -13,6 +13,21 @@ NO_RETVAL = util.symbol('NO_RETVAL')
 
 def listen(target, identifier, fn, *args, **kw):
     """Register a listener function for the given target.
+    
+    e.g.::
+    
+        from sqlalchemy import event
+        from sqlalchemy.schema import UniqueConstraint
+        
+        def unique_constraint_name(const, table):
+            const.name = "uq_%s_%s" % (
+                table.name,
+                list(const.columns)[0].name
+            )
+        event.listen(
+                UniqueConstraint, 
+                "after_parent_attach", 
+                unique_constraint_name)
 
     """
 
@@ -23,6 +38,26 @@ def listen(target, identifier, fn, *args, **kw):
             return
     raise exc.InvalidRequestError("No such event '%s' for target '%s'" %
                                 (identifier,target))
+
+def listens_for(target, identifier, *args, **kw):
+    """Decorate a function as a listener for the given target + identifier.
+    
+    e.g.::
+    
+        from sqlalchemy import event
+        from sqlalchemy.schema import UniqueConstraint
+        
+        @event.listens_for(UniqueConstraint, "after_parent_attach")
+        def unique_constraint_name(const, table):
+            const.name = "uq_%s_%s" % (
+                table.name,
+                list(const.columns)[0].name
+            )
+    """
+    def decorate(fn):
+        listen(target, identifier, fn, *args, **kw)
+        return fn
+    return decorate
 
 def remove(target, identifier, fn):
     """Remove an event listener.
